Fix crash when closing images with shape layer + mask

We shouldn't call any node's method that accesses parent() or
next/prevSibling() in ctor and dtor. It is just unsafe.

BUG:372184